<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addItemRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".ui.activity.AddItemActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/category_title_padding"
        android:text="@string/category_title"
        android:textColor="@color/colorAccent"/>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_toRightOf="@+id/categoryTitle"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryTitle"
        android:hint="@string/hint_title"
        android:maxLines="2"/>


    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleEditText"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceEditText"
        android:hint="@string/hint_details"
        android:lines="2"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsEditText"
        android:onClick="onClickAddItem"
        android:text="@string/hint_add_item"/>
</RelativeLayout>
